--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="item">
             <p>
             Piper is a thin layer over Javascript.
-            It removes brackets and uses significant whitespace to implement blocks.
+            It removes brackets { } and uses significant whitespace to implement blocks.
                 <br>
                 <br>
                 Rules:
@@ -35,7 +35,7 @@
                 <li>The only place you can declare a variable is within a global or local block -
                 ideally at the beginning of the script, function or method</li>
                 <li>LET, CONST and VAR are not permitted</li>
-                <li>Omit the () brackets in FOR and IF statements</li>
+                <li>Omit the ( ) brackets in FOR and IF statements</li>
                 <li>In a FOR statement Piper will add a LET for you after the (, so
                     <br>for i = 0; i <= pointCount; i += 1
                     <br>becomes
