--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="transpiler.js" type="text/javascript"></script>
     <script src="example1.js" type="text/javascript"></script>
     <script src="example2.js" type="text/javascript"></script>
+    <script src="example3.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -47,6 +48,7 @@
             <div class="hbox">
                 <button class="item" onclick="load(example1)">Example 1</button>
                 <button class="item" onclick="load(example2)">Example 2</button>
+                <button class="item" onclick="load(example3)">Example 3</button>
             </div>
 <!--            <textarea id="editor"></textarea>-->
             <div class="item hbox" id="editor_host"></div>
